--- a/app/src/main/res/layout/activity_details_menu_item.xml
+++ b/app/src/main/res/layout/activity_details_menu_item.xml
@@ -12,7 +12,7 @@
         android:id="@+id/imageItemIv"
         android:layout_width="0dp"
         android:layout_height="350dp"
-        android:background="#FFFAF3"
+        android:background="@color/colorWhite"
         android:padding="20dp"
         android:scaleType="centerCrop"
         android:src="@drawable/restaurant"
@@ -50,7 +50,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
         android:text="@string/categoryname_item_details_screen"
-        android:textColor="#CACACA"
+        android:textColor="@color/colorTv"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:text="@string/calories_item_details_screen"
-        android:textColor="#FF9800"
+        android:textColor="@color/colorPrimary"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,11 +95,11 @@
             android:id="@+id/priceItemTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#FF9800"
+            android:background="@color/colorPrimary"
             android:paddingHorizontal="10dp"
             android:paddingVertical="15dp"
             android:text="@string/price_item_details_screen"
-            android:textColor="@color/black"
+            android:textColor="@color/colorBlack"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -112,7 +112,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="25dp"
         android:text="@string/details_item_details_screen"
-        android:textColor="#000000"
+        android:textColor="@color/colorBlack"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +125,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:text="@string/description_item_details_screen"
-        android:textColor="#878787"
+        android:textColor="@color/colorDis"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -154,7 +154,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/quantity_btn_shap"
-                android:backgroundTint="@color/black"
+                android:backgroundTint="@color/colorBlack"
                 android:padding="3dp"
                 android:src="@drawable/ic_minuse"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -168,7 +168,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/quantity_item_details_screen"
-                android:textColor="#808080"
+                android:textColor="@color/colorTv"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -183,7 +183,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/quantity_btn_shap"
-                android:backgroundTint="#FF9D0F"
+                android:backgroundTint="@color/colorPrimary"
                 android:padding="3dp"
                 android:src="@drawable/outline_add_24"
                 app:layout_constraintBottom_toBottomOf="parent"
