--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -47,12 +47,12 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="60dp"
-        android:background="#FFF5EA"
+        android:background="@color/colorBackEt"
         android:hint="@string/email_hint_login"
-        android:textColorHint="#525252"
-        app:boxStrokeColor="#FF9800"
+        android:textColorHint="@color/colorHint"
+        app:boxStrokeColor="@color/colorPrimary"
         app:boxStrokeWidth="0dp"
-        app:hintTextColor="#FF9800"
+        app:hintTextColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/welcomeTvLogin">
@@ -72,12 +72,12 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="30dp"
-        android:background="#FFF5EA"
+        android:background="@color/colorBackEt"
         android:hint="@string/new_password_forget_password_screen"
-        android:textColorHint="#525252"
-        app:boxStrokeColor="#FF9800"
+        android:textColorHint="@color/colorHint"
+        app:boxStrokeColor="@color/colorPrimary"
         app:boxStrokeWidth="0dp"
-        app:hintTextColor="#FF9800"
+        app:hintTextColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/emailEtl">
