--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,6 @@
 
     <ImageView
         android:id="@+id/arrowBackIv"
-
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="20dp"
@@ -27,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:text="@string/login_here_tv_login"
-        android:textColor="#FF9800"
+        android:textColor="@color/colorPrimary"
         android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +40,7 @@
         android:lineHeight="30dp"
         android:text="@string/welcome_back_you_ve_been_missed_tv_login"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/colorBlack"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,12 +53,12 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="60dp"
-        android:background="#FFF5EA"
+        android:background="@color/colorBackEt"
         android:hint="@string/email_hint_login"
-        android:textColorHint="#525252"
-        app:boxStrokeColor="#FF9800"
+        android:textColorHint="@color/colorHint"
+        app:boxStrokeColor="@color/colorPrimary"
         app:boxStrokeWidth="0dp"
-        app:hintTextColor="#BF8230"
+        app:hintTextColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/welcomeTvLogin">
@@ -79,12 +78,12 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="30dp"
-        android:background="#FFF5EA"
+        android:background="@color/colorBackEt"
         android:hint="@string/password_hint_login"
-        android:textColorHint="#525252"
-        app:boxStrokeColor="#FF9800"
+        android:textColorHint="@color/colorHint"
+        app:boxStrokeColor="@color/colorPrimary"
         app:boxStrokeWidth="0dp"
-        app:hintTextColor="#FF9800"
+        app:hintTextColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/emailEtlLogin">
@@ -104,7 +103,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:text="@string/forget_your_password_tv_login"
-        android:textColor="#000000"
+        android:textColor="@color/colorBlack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/passwordEtlLogin" />
 
@@ -128,7 +127,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         android:text="@string/create_new_account_tv_login"
-        android:textColor="@color/black"
+        android:textColor="@color/colorBlack"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
