--- a/app/src/main/res/layout/activity_update_menu_item.xml
+++ b/app/src/main/res/layout/activity_update_menu_item.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/update_item_tv_update_item_screen"
-        android:textColor="@color/black"
+        android:textColor="@color/colorBlack"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/arrowBackIv"
@@ -60,12 +60,12 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="30dp"
-        android:background="#FFF5EA"
+        android:background="@color/colorBackEt"
         android:hint="@string/new_name_et_update_item_screen"
-        android:textColorHint="#525252"
-        app:boxStrokeColor="#FF9800"
+        android:textColorHint="@color/colorHint"
+        app:boxStrokeColor="@color/colorPrimary"
         app:boxStrokeWidth="0dp"
-        app:hintTextColor="#FF9800"
+        app:hintTextColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/itemIv">
@@ -85,12 +85,12 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
-        android:background="#FFF5EA"
+        android:background="@color/colorBackEt"
         android:hint="@string/new_price_et_update_item_screen"
-        android:textColorHint="#525252"
-        app:boxStrokeColor="#FF9800"
+        android:textColorHint="@color/colorHint"
+        app:boxStrokeColor="@color/colorPrimary"
         app:boxStrokeWidth="0dp"
-        app:hintTextColor="#FF9800"
+        app:hintTextColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nameEtl">
@@ -109,12 +109,12 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
-        android:background="#FFF5EA"
+        android:background="@color/colorBackEt"
         android:hint="@string/new_calories_et_update_item_screen"
-        android:textColorHint="#525252"
-        app:boxStrokeColor="#FF9800"
+        android:textColorHint="@color/colorHint"
+        app:boxStrokeColor="@color/colorPrimary"
         app:boxStrokeWidth="0dp"
-        app:hintTextColor="#FF9800"
+        app:hintTextColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/priceEtl">
@@ -133,12 +133,12 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
-        android:background="#FFF5EA"
+        android:background="@color/colorBackEt"
         android:hint="@string/description_et_update_item_screen"
-        android:textColorHint="#525252"
-        app:boxStrokeColor="#FF9800"
+        android:textColorHint="@color/colorHint"
+        app:boxStrokeColor="@color/colorPrimary"
         app:boxStrokeWidth="0dp"
-        app:hintTextColor="#FF9800"
+        app:hintTextColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/caloriesEtl">
