--- a/app/src/main/res/layout/bottom_sheet_dialog_logout.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog_logout.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="@string/logout_tv"
-        android:textColor="@color/black"
+        android:textColor="@color/colorBlack"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +34,7 @@
         android:layout_width="320dp"
         android:layout_height="1dp"
         android:layout_marginTop="25dp"
-        android:background="#CACACA"
+        android:background="@color/colorDis"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editOrDeleteTv" />
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="@string/are_you_sure_you_want_to_logout_tv"
-        android:textColor="#2F2F2F"
+        android:textColor="@color/colorTv"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
