--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -27,7 +27,7 @@
             android:layout_marginTop="50dp"
             android:gravity="center"
             android:text="@string/title_splash_tv"
-            android:textColor="@color/black"
+            android:textColor="@color/colorBlack"
             android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
             android:gravity="center"
             android:lineHeight="30dp"
             android:text="@string/text_splash_tv"
-            android:textColor="#ADADAD"
+            android:textColor="@color/colorDis"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/imageView"
