--- a/app/src/main/res/layout/item_cart_customer.xml
+++ b/app/src/main/res/layout/item_cart_customer.xml
@@ -28,7 +28,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:text="@string/pizza_marg_tv_item_cart"
-                android:textColor="#1D1D1D"
+                android:textColor="@color/colorPrice"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/imageItemIv"
@@ -53,9 +53,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:shadowColor="#FF9800"
+                android:shadowColor="@color/colorPrimary"
                 android:text="@string/calories_tv_item_cart"
-                android:textColor="#FF9800"
+                android:textColor="@color/colorPrimary"
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="@+id/nameItemTv"
                 app:layout_constraintTop_toBottomOf="@+id/nameItemTv" />
@@ -91,9 +91,9 @@
                 android:layout_marginStart="50dp"
                 android:layout_marginBottom="7dp"
                 android:paddingHorizontal="5dp"
-                android:shadowColor="#000000"
+                android:shadowColor="@color/colorBlack"
                 android:text="@string/quantity_item_cart"
-                android:textColor="#000000"
+                android:textColor="@color/colorBlack"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="@+id/totalPriceItemTv"
                 app:layout_constraintStart_toEndOf="@+id/imageItemIv"
@@ -107,7 +107,7 @@
                 android:layout_marginEnd="5dp"
                 android:shadowRadius="3"
                 android:text="@string/dollar_item_cart"
-                android:textColor="#FF9800"
+                android:textColor="@color/colorPrimary"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/totalPriceItemTv"
@@ -123,7 +123,7 @@
                 android:layout_marginBottom="10dp"
                 android:shadowRadius="3"
                 android:text="@string/price_item_cart"
-                android:textColor="#181818"
+                android:textColor="@color/colorPrice"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
