--- a/app/src/main/res/layout/item_favorite_item_menu.xml
+++ b/app/src/main/res/layout/item_favorite_item_menu.xml
@@ -29,7 +29,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:text="@string/pizza_marg_tv_item_favorite"
-                android:textColor="#1D1D1D"
+                android:textColor="@color/colorPrice"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/imageItemIv"
@@ -53,9 +53,9 @@
                 style="@style/shadowText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:shadowColor="#FF9800"
+                android:shadowColor="@color/colorPrimary"
                 android:text="@string/calories_tv_item_favorite"
-                android:textColor="#FF9800"
+                android:textColor="@color/colorPrimary"
                 android:textSize="13sp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintStart_toStartOf="@+id/nameItemTv"
@@ -70,7 +70,7 @@
                 android:layout_marginEnd="5dp"
                 android:shadowRadius="3"
                 android:text="@string/dollar_tv_item_favorite"
-                android:textColor="#FF9800"
+                android:textColor="@color/colorPrimary"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/priceItemTv"
@@ -86,7 +86,7 @@
                 android:layout_marginBottom="10dp"
                 android:shadowRadius="3"
                 android:text="@string/price_tv_item_favorite"
-                android:textColor="#181818"
+                android:textColor="@color/colorPrice"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
