--- a/app/src/main/res/drawable/corner_bottom_sheet.xml
+++ b/app/src/main/res/drawable/corner_bottom_sheet.xml
@@ -4,7 +4,7 @@
     <corners
         android:topLeftRadius="20dp"
         android:topRightRadius="20dp" />
-    <solid android:color="@color/white" />
+    <solid android:color="@color/colorWhite" />
 
     <padding
         android:bottom="10dp"
