--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,7 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="-10dp"
-        android:background="@color/white"
+        android:background="@color/colorWhite"
         android:elevation="20dp"
         app:itemActiveIndicatorStyle="@style/TransparentIndicator"
         app:itemIconTint="@color/bottom_navigation_item_color"
