--- a/app/src/main/res/layout/activity_owner.xml
+++ b/app/src/main/res/layout/activity_owner.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_marginBottom="-10dp"
-        android:background="@color/white"
+        android:background="@color/colorWhite"
         android:elevation="20dp"
         app:itemActiveIndicatorStyle="@style/TransparentIndicator"
         app:itemIconTint="@color/bottom_navigation_item_color"
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="65dp"
-        android:backgroundTint="#FFF3DE"
+        android:backgroundTint="@color/colorFbt"
         android:elevation="5dp"
         android:src="@drawable/outline_add_24"
         android:translationZ="5dp"
