--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:text="@string/good_morning_tv_home_screen"
-                android:textColor="#404040"
+                android:textColor="@color/colorHint"
                 app:layout_constraintStart_toEndOf="@+id/photoUserIv"
                 app:layout_constraintTop_toTopOf="@id/photoUserIv" />
 
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:text=""
-                android:textColor="#000000"
+                android:textColor="@color/colorBlack"
                 android:textSize="17sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@id/photoUserIv"
@@ -70,8 +70,8 @@
                 android:layout_marginTop="30dp"
                 android:background="@drawable/search_corner"
                 android:elevation="5dp"
-                android:textColorHint="#525252"
-                app:boxStrokeColor="#FF9800"
+                android:textColorHint="@color/colorHint"
+                app:boxStrokeColor="@color/colorPrimary"
                 app:boxStrokeWidth="0dp"
                 app:hintEnabled="false"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -110,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="@string/explore_menuitem_tv_home_screen"
-                android:textColor="#1F1F1F"
+                android:textColor="@color/colorBlack"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/photoUserIv"
@@ -145,7 +145,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:text="@string/all_categories_home_screen"
-                android:textColor="@color/black"
+                android:textColor="@color/colorBlack"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
