--- a/app/src/main/res/layout/fragment_live_cart.xml
+++ b/app/src/main/res/layout/fragment_live_cart.xml
@@ -36,7 +36,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:text="@string/total_price_tv_home_screen"
-                android:textColor="#A4A4A4"
+                android:textColor="@color/colorDis"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="@string/total_price_home_screen"
-                android:textColor="@color/black"
+                android:textColor="@color/colorBlack"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/totalTv"
