--- a/app/src/main/res/layout/fragment_owner_profile.xml
+++ b/app/src/main/res/layout/fragment_owner_profile.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".OwnerScreens.ProfileOwnerFragment">
 
-
     <TextView
         android:id="@+id/profileText"
         style="@style/TitleTextViewStyle"
@@ -50,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/email_tv_owner"
-        android:textColor="#838383"
+        android:textColor="@color/colorDis"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:backgroundTint="#FFEED7"
+            android:backgroundTint="@color/colorBackCircle"
             app:cardCornerRadius="100dp"
             app:cardElevation="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -90,7 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:text="@string/edit_profile_tv_owner"
-            android:textColor="@color/black"
+            android:textColor="@color/colorBlack"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -124,7 +123,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:backgroundTint="#FFEED7"
+            android:backgroundTint="@color/colorBackCircle"
             app:cardCornerRadius="100dp"
             app:cardElevation="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -143,7 +142,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:text="@string/language_tv_owner"
-            android:textColor="@color/black"
+            android:textColor="@color/colorBlack"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -176,7 +175,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:backgroundTint="#FFEED7"
+            android:backgroundTint="@color/colorBackCircle"
             app:cardCornerRadius="100dp"
             app:cardElevation="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -195,7 +194,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:text="@string/dark_mood_tv_owner"
-            android:textColor="@color/black"
+            android:textColor="@color/colorBlack"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -229,7 +228,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:backgroundTint="#FFEED7"
+            android:backgroundTint="@color/colorBackCircle"
             app:cardCornerRadius="100dp"
             app:cardElevation="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -248,7 +247,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:text="@string/logout_tv_owner"
-            android:textColor="@color/black"
+            android:textColor="@color/colorBlack"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
