--- a/app/src/main/res/layout/item_menu_item_owner.xml
+++ b/app/src/main/res/layout/item_menu_item_owner.xml
@@ -26,7 +26,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="15dp"
                 android:text="@string/name_tv_item_owner"
-                android:textColor="#1D1D1D"
+                android:textColor="@color/colorPrice"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -52,9 +52,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
-                android:shadowColor="#FF9800"
+                android:shadowColor="@color/colorPrimary"
                 android:text="@string/calories_tv_item_owner"
-                android:textColor="#FF9800"
+                android:textColor="@color/colorPrimary"
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/imageItemIv" />
@@ -68,7 +68,7 @@
                 android:layout_marginTop="10dp"
                 android:shadowRadius="3"
                 android:text="@string/price_tv_item_owner"
-                android:textColor="#181818"
+                android:textColor="@color/colorPrice"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
