--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="@string/order_tv_item_bill"
-                android:textColor="#000000"
+                android:textColor="@color/colorBlack"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="1"
-                android:textColor="#FF9800"
+                android:textColor="@color/colorPrimary"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/orderTv"
@@ -59,7 +59,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="5dp"
                 android:text="@string/date_tv_item_bill"
-                android:textColor="#000000"
+                android:textColor="@color/colorBlack"
                 android:textSize="11sp"
                 app:layout_constraintBottom_toBottomOf="@+id/orderTv"
                 app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +84,7 @@
                 android:layout_marginEnd="5dp"
                 android:shadowRadius="3"
                 android:text="@string/dollar_tv_item_bill"
-                android:textColor="#FF9800"
+                android:textColor="@color/colorPrimary"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/totalPriceOrderTv"
@@ -100,7 +100,7 @@
                 android:layout_marginBottom="10dp"
                 android:shadowRadius="3"
                 android:text="@string/price_tv_item_bill"
-                android:textColor="#181818"
+                android:textColor="@color/colorPrice"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -115,7 +115,7 @@
                 android:layout_marginBottom="10dp"
                 android:shadowRadius="3"
                 android:text="@string/total_price_tv_item_bill"
-                android:textColor="#181818"
+                android:textColor="@color/colorPrice"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
