--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,15 +1,43 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
+
+    <color name="colorPrimary">#FF9800</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorSurface">#F5F5F5</color>
+    <color name="colorOnSurface">#000000</color>
+    <color name="colorHint">#525252</color>
+    <color name="colorBackEt">#FFF5EA</color>
+    <color name="colorBtReg">#F6F6F6</color>
+    <color name="colorTv">#4D4D4D</color>
+    <color name="colorDis">#878787</color>
+    <color name="colorFbt">#FFF3DE</color>
+    <color name="colorRed">#DE0000</color>
+    <color name="colorBackCircle">#FFEED7</color>
+    <color name="colorBackCategory">#F4F4F4</color>
+    <color name="colorPrice">#181818</color>
+
+    <color name="colorBackground">#FFFFFF</color>
+
+    <style name="Theme.MyApp" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="android:colorBackground">@color/colorBackground</item>
+    </style>
+
+    <style name="Theme.MyApp.Splash" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:windowBackground">@color/colorBackground</item>
+    </style>
+
+
     <style name="Base.Theme.RestaurantProject" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
     </style>
 
     <style name="Theme.RestaurantProject" parent="Base.Theme.RestaurantProject" />
 
 
     <style name="TitleTextViewStyle">
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">@color/colorBlack</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">30sp</item>
     </style>
@@ -19,9 +47,9 @@
         <item name="shapeAppearance">@style/ButtonShape</item>
         <item name="android:elevation">6dp</item>
         <item name="android:translationZ">3dp</item>
-        <item name="backgroundTint">#FF9800</item>
+        <item name="backgroundTint">@color/colorPrimary</item>
         <item name="android:stateListAnimator">@null</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textSize">20sp</item>
     </style>
 
@@ -31,8 +59,8 @@
         <item name="android:elevation">1dp</item>
         <item name="android:translationZ">2dp</item>
         <item name="android:stateListAnimator">@null</item>
-        <item name="backgroundTint">#F6F6F6</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="backgroundTint">@color/colorBtReg</item>
+        <item name="android:textColor">@color/colorBlack</item>
         <item name="android:textSize">20sp</item>
     </style>
 
