--- a/app/src/main/res/anim/slide_in_sheet_dialog.xml
+++ b/app/src/main/res/anim/slide_in_sheet_dialog.xml
@@ -4,7 +4,6 @@
     <translate
         android:duration="400"
         android:fromYDelta="100dp"
-        android:toYDelta="0dp"
-        />
+        android:toYDelta="0dp" />
 
 </set>
