--- a/app/src/main/res/anim/slide_out_sheet_dialog.xml
+++ b/app/src/main/res/anim/slide_out_sheet_dialog.xml
@@ -4,7 +4,6 @@
     <translate
         android:duration="400"
         android:fromYDelta="0"
-        android:toYDelta="100dp"
-        />
+        android:toYDelta="100dp" />
 
 </set>
