--- a/app/src/main/res/layout/activity_update_user_data.xml
+++ b/app/src/main/res/layout/activity_update_user_data.xml
@@ -122,7 +122,7 @@
             android:id="@+id/passwordEtAddUser"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="text" />
+            android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
