--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,13 +20,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/notificationsIv"
                 android:layout_width="34dp"
                 android:layout_height="34dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
-                android:src="@drawable/notifications"
+                android:src="@drawable/restaurant"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
