--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,4 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
 
     <color name="colorPrimary">#FF9800</color>
     <color name="colorWhite">#FFFFFF</color>
@@ -26,7 +25,12 @@
 
     <style name="Theme.MyApp.Splash" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:windowBackground">@color/colorBackground</item>
+
+        <item name="android:windowSplashScreenAnimatedIcon" tools:targetApi="31">@drawable/restaurant</item>
+        <item name="android:windowSplashScreenBackground" tools:targetApi="31">@color/colorBackground</item>
     </style>
+
+
 
 
     <style name="Base.Theme.RestaurantProject" parent="Theme.Material3.DayNight.NoActionBar">
